sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:10: error: not found: value cell
    cell = 0;
    ^AlgSelectionSort:18: error: not found: value cell
        cell = j;
        ^AlgSelectionSort:24: error: not found: value cell
    echange(i,cell);
              ^